# EgdmontEngine

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
Game/: main.cpp
Reference/ImguiSDLSetup/: main.cpp
